--- a/index.html
+++ b/index.html
@@ -7,5 +7,81 @@
   </head>
   <body>
 
+    <header>
+
+      <img id="logo" src="./ressources/images/img-tea-cozy-logo.png" alt="TeaCozy logo">
+
+      <nav>
+        <ul>
+          <li><a href="#mission">Mission</a></li>
+          <li><a href="#featured">Featured Tea</a></li>
+          <li><a href="#locations">Locations</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <div class="main">
+
+      <div class="container mission">
+        <div class="banner">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <div id="featured">
+
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+
+        <div class="products">
+
+          <div class="product">
+            <img src="./ressources/images/img-berryblitz.jpg" alt="Tea Cup">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+
+          <div class="product">
+            <img src="./ressources/images/img-spiced-rum.jpg" alt="Tea Box">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+
+          <div class="product">
+            <img src="./ressources/images/img-donut.jpg" alt="Donut">
+            <h4>Seasonal Donuts</h4>
+          </div>
+
+          <div class="product">
+            <img src="./ressources/images/img-myrtle-ave.jpg" alt="Myrtle Ave">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+
+          <div class="product">
+            <img src="./ressources/images/img-bedford-bizarre.jpg" alt="Tea Cup (with sugar)">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+
+        </div>
+      </div>
+
+      <div id="locations" class="container">
+
+        <h2>Locations</h2>
+
+      </div>
+
+      <div id="contact">
+        <h2>The Tea Cozy</h2>
+        <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+        <h5>917-555-8904</h5>
+      </div>
+
+    </div>
+
+    <footer>
+      <p>copyright The Tea Cozy 2017</p>
+    </footer>
+
   </body>
 </html>
