--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./ressources/css/style.css">
     <title>Tea Cozy</title>
+    
   </head>
   <body>
+
+    <!-- Header -->
 
     <header>
 
@@ -21,14 +25,22 @@
 
     </header>
 
+    <!-- Main part -->
+
     <div class="main">
 
-      <div class="container mission">
+      <!-- Mission -->
+
+      <div id="mission" class="container">
+
         <div class="banner">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
+
       </div>
+
+      <!-- Featured -->
 
       <div id="featured">
 
@@ -65,19 +77,48 @@
         </div>
       </div>
 
-      <div id="locations" class="container">
+      <!-- Locations -->
+
+      <div id="locations">
 
         <h2>Locations</h2>
 
+        <div class="container">
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="location">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+
       </div>
+
+      <!-- Contact -->
 
       <div id="contact">
         <h2>The Tea Cozy</h2>
         <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
-        <h5>917-555-8904</h5>
+        <h5><a href="tel:917-555-8904">917-555-8904</a></h5>
       </div>
 
     </div>
+
+    <!-- Footer -->
 
     <footer>
       <p>copyright The Tea Cozy 2017</p>
